# eggalite

./: dune-project  eggalite.opam
lib/: dune  eclass.ml  hashcons.ml  id.ml  unionfind.ml
test/: dune
