(lang dune 3.19)

(name eggalite)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Nicole Heinimann <nicole@heinimann.de>")

(maintainers "Nicole Heinimann <nicole@heinimann.de>")

(license LICENSE)

(documentation <https://url/to/documentation>)

(package
 (name eggalite)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at <https://dune.readthedocs.io/en/stable/reference/dune-project/index.html>
